--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ ga_domain: huangxuan.me
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
+sidebar-about-description: "不忘初心，方得始终"
 sidebar-avatar: /img/IMG_1629.JPG      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
